@startuml
skinparam classAttributeIconSize 0

package "domain.dto" {
  class StatementDTO {
    - nsd: int
    - company_name: Optional[str]
    - quarter: Optional[str]
    - version: Optional[str]
    - grupo: str
    - quadro: str
    - account: str
    - description: str
    - value: float
    + from_dict(raw: dict): StatementDTO
  }
}

package "infrastructure.models" {
  class StatementModel {
    - nsd: int
    - company_name: str
    - quarter: str
    - version: str
    - grupo: str
    - quadro: str
    - account: str
    - description: str
    - value: float
    + from_dto(dto: StatementDTO): StatementModel
  }

  StatementModel ..> StatementDTO : <<convert from>>
}

package "infrastructure.repositories" {
  class SqlAlchemyStatementRepository {
    - config: Config
    - logger: LoggerPort
    + save_all(items: List[StatementDTO])
  }

  SqlAlchemyStatementRepository --> StatementDTO
  SqlAlchemyStatementRepository --> StatementModel
}

@enduml
